support_tools/swigwin-3.0.12/Examples/test-suite/errors/nomodule.i
/* No module name */
int foo(int);
